tests/paczka1/fuzzy1/83252840.err
Error in line 14: vwiouura0dB S836 14,8
Error in line 17: T86dis S836 29,0
Error in line 13: Xq3gPb S236 90,6
Error in line 22: Xq3gPb A891 34,8
Error in line 25: hdxfRZVmBB S46 71,7
Error in line 26: hdxfRZVmBB S836 35,0
Error in line 33: hdxfRZVmBB S836 9รถ,รถ
Error in line 39: Xq3gPb S836 28,6
